--- a/ActionCommandGame.Ui.Mvc/Views/Game/Index.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/Index.cshtml
@@ -1,4 +1,28 @@
 ﻿@model GameView
 
-@Model.Player.Name
-@Model.Player.Money
+<div class="container-fluid">
+	<div class="row">
+		<div class="col sidebar">
+			<h3 class="ml-auto">Hello @Model.Player.Name</h3>
+		</div>
+		<div class="col main-content">
+			<h1>Main Content</h1>
+			<p>@Model.Player.Name</p>
+			<div class="mt-3">
+				<button type="button" class="btn btn-primary mr-2">Mine</button>
+				<button type="button" class="btn btn-secondary mr-2">Shop</button>
+				<button type="button" class="btn btn-secondary mr-2">Leaderboard</button>
+				<button type="button" class="btn btn-success mr-2">Inventory</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!--
+<a asp-controller="" asp-action="">Mine</a>
+<a asp-controller="" asp-action="">Shop</a>
+<a asp-controller="" asp-action="">Buy</a>
+<a asp-controller="" asp-action="">Stats</a>
+<a asp-controller="" asp-action="">Ranking</a>
+<a asp-controller="" asp-action="">Inventory</a>
+<a asp-controller="" asp-action="">Help</a> -->
