--- a/ActionCommandGame.Ui.Mvc/wwwroot/css/site.css
+++ b/ActionCommandGame.Ui.Mvc/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-html {
+/*html {
   font-size: 14px;
 }
 
@@ -19,4 +19,19 @@ html {
 
 body {
   margin-bottom: 60px;
+}*/
+
+.sidebar {
+    width: 250px;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #f8f9fa;
+    padding: 20px;
+}
+
+.main-content {
+    margin-left: 250px; 
+    padding: 20px;
 }
