--- a/ActionCommandGame.Ui.Mvc/Views/Index/Index.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Index/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>Welcome to ActionCommandGame</h1>
+
+<a class="nav-link text-dark" asp-area="" asp-controller="Index" asp-action="Register">Register</a>
+<a class="nav-link text-dark" asp-area="" asp-controller="Index" asp-action="Login">Login</a>
