--- a/ActionCommandGame.Ui.Mvc/Views/Index/Login.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Index/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>Login</h1>
-<form method="post"> <!-- asp-route-returnUrl="retyrburrl" -->
+<form method="post" asp-route-returnUrl="@returnUrl">
     <div asp-validation-summary="ModelOnly"></div>
 
     <div class="mb-3">
