--- a/ActionCommandGame.Ui.Mvc/Views/Game/Index.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/Index.cshtml
@@ -1,21 +1,20 @@
-﻿@model GameView
+﻿
 
 <div class="container-fluid">
 	<div class="row">
 		<div class="col sidebar">
-            <h3 class="ml-auto">Hello @Model.Player.Name</h3>
-			
-            <button type="button" class="btn btn-primary mr-2">Logout</button>
+            <partial name="_SidebarPartial"/>
         </div>
 		<div class="col main-content">
 			<h1>Main Content</h1>
-			<p>@Model.Player.Name</p>
-			<div class="mt-3">
-				<button type="button" class="btn btn-primary mr-2">Mine</button>
-				<button type="button" class="btn btn-secondary mr-2">Shop</button>
-				<button type="button" class="btn btn-secondary mr-2">Leaderboard</button>
-				<button type="button" class="btn btn-success mr-2">Inventory</button>
-			</div>
+			<p>A</p>
+            <div class="mt-3">
+                <button type="button" class="btn btn-primary mr-2">Mine</button>
+                <button type="button" class="btn btn-secondary mr-2">Shop</button>
+                <button type="button" class="btn btn-secondary mr-2">Leaderboard</button>
+                <button type="button" class="btn btn-success mr-2">Inventory</button>
+            </div>
+            <div id="stats"></div>
 		</div>
 	</div>
 </div>
