--- a/ActionCommandGame.Ui.Mvc/Views/_ViewImports.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ActionCommandGame.Ui.Mvc
 @using ActionCommandGame.Ui.Mvc.Models
+@using ActionCommandGame.Model
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
