--- a/ActionCommandGame.Ui.Mvc/Views/Game/Index.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/Index.cshtml
@@ -7,7 +7,7 @@
         </div>
 		<div class="col main-content">
 			<h1>Main Content</h1>
-			<p>A</p>
+			<p>@ViewData["PlayerName"]</p>
             <div class="mt-3">
                 <button type="button" class="btn btn-primary mr-2">Mine</button>
                 <button type="button" class="btn btn-secondary mr-2">Shop</button>
