voorlopige fix, Error in enum word voor een of andere reden omgezzert naar Info

--- a/ActionCommandGame.Ui.Mvc/Views/Index/Register.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Index/Register.cshtml
@@ -17,6 +17,11 @@
         <span asp-validation-for="Username"></span>
     </div>
     <div class="mb-3">
+        <label asp-for="DisplayName" class="form-label"></label>
+        <input asp-for="DisplayName" class="form-control">
+        <span asp-validation-for="DisplayName"></span>
+    </div>
+    <div class="mb-3">
         <label asp-for="Password" class="form-label"></label>
         <input asp-for="Password" class="form-control">
         <span asp-validation-for="Password"></span>
