--- a/ActionCommandGame.Ui.Mvc/Views/Game/_SidebarPartial.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/_SidebarPartial.cshtml
@@ -2,7 +2,8 @@
     var returnUrl = ViewBag.ReturnUrl?.ToString();
 }
 
-<h3 class="ml-auto">Hello A</h3>
+<h3 class="ml-auto">Hello @ViewData["PlayerName"]</h3>
+<div id="stats"></div>
 
 <form method="post" class="form-inline">
     <button type="submit" class="btn btn-primary mr-2" asp-controller="Index" asp-action="Logout" asp-route-returnUrl="@returnUrl">Logout</button>
