--- a/ActionCommandGame.Ui.Mvc/Views/Shared/_Layout.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/ActionCommandGame.Ui.Mvc.styles.css" asp-append-version="true" />
 </head>
 <body>
-<!--<header>
+<header>
 	<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
 		<div class="container-fluid">
 			<a class="navbar-brand" asp-area="" asp-controller="Index" asp-action="Index">ActionCommandGame.Ui.Mvc</a>
@@ -27,22 +27,22 @@
 		</div>
 	</nav>
 </header>
-<div class="container">
-	<main role="main" class="pb-3">
-		
+	<!--<div class="container"> -->
+	<main role="main">
+        @RenderBody()
 	</main>
-</div>
+	<!--</div> -->
 
 <footer class="border-top footer text-muted">
 	<div class="container">
 		&copy; 2024 - ActionCommandGame
 	</div>
 </footer>
--->
-	@RenderBody()
+	
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 </body>
 </html>
