--- a/ActionCommandGame.Ui.Mvc/Views/Game/Index.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/Index.cshtml
@@ -7,12 +7,13 @@
         </div>
 		<div class="col main-content">
 			<h1>Main Content</h1>
-			<p>@ViewData["PlayerName"]</p>
+            <p>@ViewData["PlayerName"]</p>
+            <div id="active-panel"></div>
             <div class="mt-3">
                 <button type="button" class="btn btn-primary mr-2">Mine</button>
-                <button type="button" class="btn btn-secondary mr-2">Shop</button>
+                <button type="button" class="btn btn-warning mr-2" id="shop-button">Shop</button>
                 <button type="button" class="btn btn-secondary mr-2">Leaderboard</button>
-                <button type="button" class="btn btn-success mr-2">Inventory</button>
+                <button type="button" class="btn btn-success mr-2" id="inventory-button">Inventory</button>
             </div>
 		</div>
 	</div>
