--- a/ActionCommandGame.Ui.Mvc/Views/Game/_ShopPartial.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/_ShopPartial.cshtml
@@ -1,8 +1,18 @@
 ﻿@model IList<Item>
 
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+<h4>Shop</h4>
 
+<div class="row">
+    @foreach (var item in Model)
+    {
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">@item.Name</h5>
+                    <p class="card-text">@item.Description</p>
+                    <a href="#" class="btn btn-primary">Buy</a>
+                </div>
+            </div>
+        </div>
+    }
+</div>
