basic game routine

--- a/ActionCommandGame.Ui.Mvc/Views/_ViewImports.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using ActionCommandGame.Ui.Mvc
 @using ActionCommandGame.Ui.Mvc.Models
 @using ActionCommandGame.Model
+@using ActionCommandGame.Services.Model.Core
+@using ActionCommandGame.Services.Model.Results
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
