--- a/ActionCommandGame.Ui.Mvc/Views/Game/Index.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/Index.cshtml
@@ -10,7 +10,7 @@
             <p>@ViewData["PlayerName"]</p>
             <div id="active-panel"></div>
             <div class="mt-3">
-                <button type="button" class="btn btn-primary mr-2">Mine</button>
+                <button type="button" class="btn btn-primary mr-2" id="patrol-button">Patrol</button>
                 <button type="button" class="btn btn-warning mr-2" id="shop-button">Shop</button>
                 <button type="button" class="btn btn-secondary mr-2">Leaderboard</button>
                 <button type="button" class="btn btn-success mr-2" id="inventory-button">Inventory</button>
