--- a/ActionCommandGame.Ui.Mvc/Views/Game/_BuyPartial.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/_BuyPartial.cshtml
@@ -1,5 +1,18 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@model ServiceResult<BuyResult>
+
+@if (Model.IsSuccess)
+{
+    <!-- sucess-->
+    <p>Bought @Model.Data.Item.Name</p>
+}
+else
+{
+    <!-- failed -->
+    @if (Model?.Messages != null)
+    {
+        foreach (var message in Model.Messages)
+        {
+            <p>@message.Message</p>
+        }
+    }
 }
