--- a/ActionCommandGame.Ui.Mvc/Views/Game/_ShopPartial.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/_ShopPartial.cshtml
@@ -10,7 +10,7 @@
                 <div class="card-body">
                     <h5 class="card-title">@item.Name</h5>
                     <p class="card-text">@item.Description</p>
-                    <a href="#" class="btn btn-primary">Buy</a>
+                    <button class="btn btn-success buy-button" data-itemid="@item.Id">Buy</button>
                 </div>
             </div>
         </div>
