--- a/ActionCommandGame.Ui.Mvc/Views/Game/_StatsPartial.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/_StatsPartial.cshtml
@@ -2,5 +2,7 @@
 
 @if (Model != null)
 {
-    <p>User ID: @Model.Id</p>
+    <p>Money: <br/>@Model.Money</p>
+    <p>Experience: <br/>@Model.Experience</p>
+    <p>User ID: <br/>@Model.Id</p>
 }
