--- a/ActionCommandGame.Ui.Mvc/Views/Index/Index.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Index/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1>Welcome to ActionCommandGame</h1>
+<h1>Welcome to Firefighter Adventure</h1>
 
 <a class="nav-link text-dark" asp-area="" asp-controller="Index" asp-action="Register">Register</a>
 <a class="nav-link text-dark" asp-area="" asp-controller="Index" asp-action="Login">Login</a>
