--- a/ActionCommandGame.Ui.Mvc/wwwroot/css/site.css
+++ b/ActionCommandGame.Ui.Mvc/wwwroot/css/site.css
@@ -1,26 +1,3 @@
-/*html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
-}*/
-
 .sidebar {
     width: 250px;
     height: 100%;
@@ -29,6 +6,21 @@ body {
     left: 0;
     background-color: #f8f9fa;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.sidebar-content {
+    flex: 1;
+}
+
+.logout-container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin-top: auto;
+    padding-bottom: 2vh;
 }
 
 .main-content {
