remove unnecesarry jwt bearer scheme

--- a/ActionCommandGame.Ui.Mvc/Views/Game/Index.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/Index.cshtml
@@ -6,8 +6,8 @@
             <partial name="_SidebarPartial"/>
         </div>
 		<div class="col main-content">
-			<h1>Main Content</h1>
-            <p>@ViewData["PlayerName"]</p>
+			<h2>Firefighter Adventure</h2>
+            <p>@ViewData["PlayerName"], ready for duty!</p>
             <div id="active-panel"></div>
             <div class="mt-3">
                 <button type="button" class="btn btn-primary mr-2" id="patrol-button">Patrol</button>
