--- a/ActionCommandGame.Ui.Mvc/Views/Game/_StatsPartial.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/_StatsPartial.cshtml
@@ -3,9 +3,12 @@
 
 @if (Model != null)
 {
-    <p>Money: <br/>@Model.Money</p>
-    <p>Level: <br/>@Model.GetLevel()</p>
-    <p>Experience until level-up: (@Model.Experience/@Model.GetExperienceForNextLevel())</p>
-    <p>Total Experience: <br/>@Model.Experience</p>
-    <p>User ID: <br/>@Model.Id</p>
+    <div style="text-align: center;">
+        <p>Money: <br/>@Model.Money</p>
+        <p>Level: <br/>@Model.GetLevel()</p>
+        <p>Experience until level-up: (@Model.Experience/@Model.GetExperienceForNextLevel())</p>
+        <p>Total Experience: <br/>@Model.Experience</p>
+        <p>User ID: <br/>@Model.Id</p>
+    </div>
+    
 }
