--- a/ActionCommandGame.Ui.Mvc/Views/Game/_ShopPartial.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/_ShopPartial.cshtml
@@ -9,6 +9,7 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">@item.Name</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">€ @item.Price</h6>
                     <p class="card-text">@item.Description</p>
                     <button class="btn btn-success buy-button" data-itemid="@item.Id">Buy</button>
                 </div>
