--- a/ActionCommandGame.Ui.Mvc/Views/Index/Index.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Index/Index.cshtml
@@ -1,8 +1,13 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Firefighter Adventure";
 }
 
-<h1>Welcome to Firefighter Adventure</h1>
 
-<a class="nav-link text-dark" asp-area="" asp-controller="Index" asp-action="Register">Register</a>
-<a class="nav-link text-dark" asp-area="" asp-controller="Index" asp-action="Login">Login</a>
+    <div class="text-center">
+        <h1>Welcome to Firefighter Adventure</h1>
+        <a class="btn btn-primary m-1" asp-area="" asp-controller="Index" asp-action="Login">Login</a>
+        <a class="btn btn-secondary m-1" asp-area="" asp-controller="Index" asp-action="Register">Register</a>
+        
+    </div>
+
+
