--- a/ActionCommandGame.Ui.Mvc/Views/Game/_SidebarPartial.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/_SidebarPartial.cshtml
@@ -8,6 +8,6 @@
 </div>
 <div class="logout-container">
     <form method="post" class="form-inline">
-        <button type="submit" class="btn btn-primary mr-2" asp-controller="Index" asp-action="Logout" asp-route-returnUrl="@returnUrl">Logout</button>
+        <button type="submit" class="btn btn-danger mr-1" asp-controller="Index" asp-action="Logout" asp-route-returnUrl="@returnUrl">Logout</button>
     </form>
 </div>
