--- a/ActionCommandGame.Ui.Mvc/Views/Game/_StatsPartial.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/_StatsPartial.cshtml
@@ -17,7 +17,7 @@
         </div>
 
         <p>Total Experience: <br/>@Model.Experience</p>
-        <p>User ID: <br/>@Model.Id</p>
+        <p class="mt-auto">User ID: <br/>@Model.Id</p>
     </div>
     
 }
