--- a/ActionCommandGame.Ui.Mvc/Views/Index/Index.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Index/Index.cshtml
@@ -3,11 +3,13 @@
 }
 
 
+<div class="home-background">
     <div class="text-center">
-        <h1>Welcome to Firefighter Adventure</h1>
-        <a class="btn btn-primary m-1" asp-area="" asp-controller="Index" asp-action="Login">Login</a>
-        <a class="btn btn-secondary m-1" asp-area="" asp-controller="Index" asp-action="Register">Register</a>
-        
+        <div class="content-box">
+            <h2>Welcome to Firefighter Adventure</h2>
+            <a class="btn btn-primary m-1" asp-area="" asp-controller="Index" asp-action="Login">Login</a>
+            <a class="btn btn-secondary m-1" asp-area="" asp-controller="Index" asp-action="Register">Register</a>
+        </div>
     </div>
-
+</div>
 
