--- a/ActionCommandGame.Ui.Mvc/Views/Item/Index.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Item/Index.cshtml
@@ -27,10 +27,12 @@
             <td>@item.Description</td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a id="loadModalButton" data-itemid="@item.Id" href="">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
     }
     </tbody>
 </table>
+
+<div class="active-modal"></div>
