--- a/ActionCommandGame.Ui.Mvc/Views/Shared/_Layout.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Shared/_Layout.cshtml
@@ -10,9 +10,12 @@
 </head>
 <body>
 <header>
-	<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+	<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
 		<div class="container-fluid">
-			<a class="navbar-brand" asp-area="" asp-controller="Index" asp-action="Index">Firefighter Adventure</a>
+            <a class="navbar-brand" asp-area="" asp-controller="Index" asp-action="Index">
+                <img src="./img/icon.png" width="30" height="30" class="d-inline-block align-top" alt="">
+                Firefighter Adventure
+            </a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
 			        aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -23,11 +26,17 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Index" asp-action="Index">Home</a>
                     </li>
                 </ul>
-                @if (User.IsInRole("Admin"))
+                @if (User.Identity.IsAuthenticated)
                 {
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link" asp-controller="Admin" asp-action="Index">Admin</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-controller="Settings" asp-action="Index">Settings</a></li>
                     </ul>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item"><a class="nav-link" asp-controller="Admin" asp-action="Index">Admin</a></li>
+                        </ul>
+                    }
                 }
 			</div>
 		</div>
