--- a/ActionCommandGame.Ui.Mvc/Views/Shared/_Layout.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 	<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
 		<div class="container-fluid">
             <a class="navbar-brand" asp-area="" asp-controller="Index" asp-action="Index">
-                <img src="./img/icon.png" width="30" height="30" class="d-inline-block align-top" alt="">
+                <img src="/img/icon.png" width="30" height="30" class="d-inline-block align-top" alt="">
                 Firefighter Adventure
             </a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
