--- a/ActionCommandGame.Ui.Mvc/Views/Game/Index.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/Index.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@{
+    ViewData["BodyClass"] = "game";
+}
 
 <div class="container-fluid">
 	<div class="row">
@@ -10,10 +12,10 @@
             <p>@ViewData["PlayerName"], ready for duty!</p>
             <div id="active-panel"></div>
             <div class="mt-3">
-                <button type="button" class="btn btn-primary mr-2" id="patrol-button">Patrol</button>
-                <button type="button" class="btn btn-warning mr-2" id="shop-button">Shop</button>
-                <button type="button" class="btn btn-secondary mr-2" id="leaderboard-button">Leaderboard</button>
-                <button type="button" class="btn btn-success mr-2" id="inventory-button">Inventory</button>
+                <button type="button" class="btn btn-danger mr-2" id="patrol-button">Patrol</button>
+                <button type="button" class="btn btn-success mr-2" id="shop-button">Shop</button>
+                <button type="button" class="btn btn-warning mr-2" id="inventory-button">Inventory</button>
+                <button type="button" class="btn btn-info mr-2" id="leaderboard-button">Leaderboard</button>
             </div>
 		</div>
 	</div>
