--- a/ActionCommandGame.Ui.Mvc/Views/Shared/_Layout.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ActionCommandGame.Ui.Mvc.styles.css" asp-append-version="true" />
 </head>
-<body>
+<body class="@(ViewData["BodyClass"] ?? "")">
 <header>
 	<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
 		<div class="container-fluid">
