--- a/ActionCommandGame.Ui.Mvc/Views/Index/Register.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Index/Register.cshtml
@@ -17,22 +17,22 @@
                         <div class="mb-3">
                             <label asp-for="Username" class="form-label"></label>
                             <input asp-for="Username" class="form-control">
-                            <span asp-validation-for="Username"></span>
+                            <span asp-validation-for="Username" class="text-danger"></span>
                         </div>
                         <div class="mb-3">
                             <label asp-for="DisplayName" class="form-label"></label>
                             <input asp-for="DisplayName" class="form-control">
-                            <span asp-validation-for="DisplayName"></span>
+                            <span asp-validation-for="DisplayName" class="text-danger"></span>
                         </div>
                         <div class="mb-3">
                             <label asp-for="Password" class="form-label"></label>
                             <input asp-for="Password" class="form-control">
-                            <span asp-validation-for="Password"></span>
+                            <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
                         <div class="mb-3">
                             <label asp-for="ConfirmPassword" class="form-label"></label>
                             <input asp-for="ConfirmPassword" class="form-control">
-                            <span asp-validation-for="ConfirmPassword"></span>
+                            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                         </div>
 
                         <button type="submit" class="btn btn-primary w-100">Register</button>
