--- a/ActionCommandGame.Ui.Mvc/Views/NegativeGameEvents/Index.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/NegativeGameEvents/Index.cshtml
@@ -4,33 +4,36 @@
     ViewData["Title"] = "NegativeGameEvents";
 }
 
-<h1>Items</h1>
-
-<p>
-    <a asp-action="Create">New NegativeGameEvent</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+<div class="container mt-3">
+    <div class="col-12">
+        <h1 class="text-center">@ViewData["Title"]</h1>
+        <p class="text-center">
+            <a class="btn btn-success" asp-action="Create">New NegativeGameEvent</a>
+        </p>
+        <table class="table table-striped table-hover table-dark">
+            <thead class="thead-dark">
             <tr>
-                <td>@item.Id</td>
-                <td>@item.Name</td>
-                <td>@item.Description</td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Actions</th>
             </tr>
-        }
-    </tbody>
-</table>
+            </thead>
+            <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.Id</td>
+                    <td>@item.Name</td>
+                    <td>@item.Description</td>
+                    <td>
+                        <a class="btn btn-primary btn-sm" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                        <a class="btn btn-info btn-sm" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                        <a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                </tr>
+            }
+            </tbody>
+        </table>
+    </div>
+ </div>
