--- a/ActionCommandGame.Ui.Mvc/Views/Game/_ShopPartial.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/_ShopPartial.cshtml
@@ -1,37 +1,40 @@
 ﻿@model IList<Item>
 
-<h4>Shop</h4>
+@{
+    ViewData["Title"] = "Shop";
+}
 
-<div class="row g-2">
+    <h4>@ViewData["Title"]</h4>
     <h5>Your current balance: <b>€ @ViewData["Money"]</b></h5>
-    @foreach (var item in Model)
-    {
-        <div class="col-sm-3">
-            <div class="card p-2">
-                <div class="card-body">
-                    <h5 class="card-title">@item.Name</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">€ @item.Price</h6>
-                    <p class="card-text">@item.Description</p>
-                    <button class="btn btn-success buy-button" data-itemid="@item.Id">Buy</button>
-                </div>
-                @if (item.Attack is not 0 || item.Defense is not 0 || item.Fuel is not 0)
-                {
-                    <div class="card-footer">
-                        @if (item.Attack is not 0)
-                        {
-                            <p>Attack: @item.Attack</p>
-                        }
-                        @if (item.Defense is not 0)
-                        {
-                            <p>Defense: @item.Defense</p>
-                        }
-                        @if (item.Fuel is not 0)
-                        {
-                            <p>Fuel: @item.Fuel</p>
-                        }
+    <div class="row g-3 shaved-card">
+        @foreach (var item in Model)
+        {
+            <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="card h-100">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title text-black">@item.Name</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">€ @item.Price</h6>
+                        <p class="card-text text-black">@item.Description</p>
+                        <button class="btn btn-success mt-auto buy-button" data-itemid="@item.Id">Buy</button>
                     </div>
-                }
+                    @if (item.Attack is not 0 || item.Defense is not 0 || item.Fuel is not 0)
+                    {
+                        <div class="card-footer">
+                            @if (item.Attack is not 0)
+                            {
+                                <p class="mb-1 text-black">Attack: @item.Attack</p>
+                            }
+                            @if (item.Defense is not 0)
+                            {
+                                <p class="mb-1 text-black">Defense: @item.Defense</p>
+                            }
+                            @if (item.Fuel is not 0)
+                            {
+                                <p class="mb-0 text-black">Fuel: @item.Fuel</p>
+                            }
+                        </div>
+                    }
+                </div>
             </div>
-        </div>
-    }
-</div>
+        }
+    </div>
