--- a/ActionCommandGame.Ui.Mvc/Views/Game/_StatsPartial.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/_StatsPartial.cshtml
@@ -7,17 +7,23 @@
 
 @if (Model != null)
 {
-    <div style="text-align: center;">
-        <p>Money: <br/>@Model.Money</p>
-        <p>Level: <br/>@Model.GetLevel()</p>
+    <div class="text-center">
+        <p>Money: <br/><strong>@Model.Money</strong></p>
+        <p>Level: <br/><strong>@Model.GetLevel()</strong></p>
 
-        <p>Experience until level-up: (@Model.Experience/@Model.GetExperienceForNextLevel())</p>
-        <div class="progress" role="progressbar" aria-valuenow="@percentage" aria-valuemin="0" aria-valuemax="100">
-            <div class="progress-bar bg-success" style="width: @percentage%;" >@percentage%</div>
+        <p>Experience until level-up: <br/><strong>(@Model.Experience/@Model.GetExperienceForNextLevel())</strong></p>
+        <div class="progress mb-3" style="height: 25px;">
+            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="@percentage" aria-valuemin="0" aria-valuemax="100" style="width: @percentage%;">
+                @percentage%
+            </div>
         </div>
 
-        <p>Total Experience: <br/>@Model.Experience</p>
-        <p class="mt-auto">User ID: <br/>@Model.Id</p>
+        <p>Total Experience: <br/><strong>@Model.Experience</strong></p>
+            
+        <p>
+            Attack: <strong>@(Model.CurrentAttackPlayerItem?.RemainingAttack ?? 0)</strong><br/>
+            Defense: <strong>@(Model.CurrentDefensePlayerItem?.RemainingDefense ?? 0)</strong><br/>
+            Fuel: <strong>@(Model.CurrentFuelPlayerItem?.RemainingFuel ?? 0)</strong>
+        </p>
     </div>
-    
 }
